Bug 576229 – Doesn't handle files with leading space (upstream)

ParseFTPList can't handle regular unix ls -l listing of filenames
starting with spaces

upstream references:
http://bugzilla.mozilla.org/show_bug.cgi?id=484684
http://hg.mozilla.org/mozilla-central/rev/179c6f22d6f2